--- a/YahooDownload.user.cfg
+++ b/YahooDownload.user.cfg
@@ -3,6 +3,9 @@
 ^OEX,SP100,INDICES
 ^OVX,Crude Oil Volatility Index,INDICATOR
 ^XII,INSTITUTIONAL INDEX,INDICES
+ALBUD.PA,BUDGET TELECOM,EURONEXT
+ALPRI.PA,PRISMAFLEX INTL,EURONEXT
+ALQGC.PA,QUANTUM GENOMICS,EURONEXT
 ALVER.PA,VERGNET,EURONEXT
 BUND,PIMCO Germany Bonds,BOND
 BUNL,German BUND ETF,BOND
@@ -27,5 +30,6 @@ THD,iShares MSCI Thailand,FUND
 TLT,20+ Years T-Bonds,BOND
 TOU.PA,TOUPARGEL GROUPE,EURONEXT
 TWTR,TWITTER,SP500
+VLTSA.PA,VOLTALIA,EURONEXT
 XME,METAL & MINING,SECTORS
 XOP,OIL & GAS EXPLORER,SECTORS
