--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -1,5 +1,5 @@
 # Personal Google download config file
-#$TRIN,TRIN,INDICATOR
+$TRIN,TRIN,INDICATOR
 #$TRIN_LOG,TRIN_LOG,INDICATOR
 #$TRIN_SUM,TRIN_SUM,INDICATOR
 #$TRIN_LOG_SUM,TRIN_LOG_SUM,INDICATOR
