--- a/GoogleDownload.cfg
+++ b/GoogleDownload.cfg
@@ -1,35 +1,35 @@
 Google Code,File Name,Group
 ########################################         DAX30      ###################################
-ETR:ADS,ADIDAS,DAX30
-ETR:ALV,ALLIANZ,DAX30
-ETR:BAS,BASF,DAX30
-ETR:BAYN,BAYER,DAX30
-ETR:BEI,BEIERSDORF,DAX30
-ETR:BMW,BMW,DAX30
-ETR:CBK,COMMERZBANK,DAX30
-ETR:DAI,DAIMLER,DAX30
-ETR:DB1,DEUTSCHE BOERSE,DAX30
-ETR:DBK,DEUTSCHE BANK,DAX30
-ETR:DPW,DEUTSCHE POST,DAX30
-ETR:DTE,DEUTSCHE TELEKOM,DAX30
-ETR:EOAN,E.ON,DAX30
-ETR:FME,FRESENIUS MED CARE,DAX30
-ETR:FRE,FRESENIUS,DAX30
-ETR:HEI,HEIDELBERGCEMENT,DAX30
-ETR:HEN3,HENKEL,DAX30
-ETR:IFX,INFINEON TECHNOLO,DAX30
-ETR:LHA,DT.LUFTHANSA,DAX30
-ETR:LIN,LINDE,DAX30
-ETR:MAN,MAN,DAX30
-ETR:MEO,METRO,DAX30
-ETR:MRK,MERCK,DAX30
-ETR:MUV2,MUNICHRE,DAX30
-ETR:RWE,RWE,DAX30
-ETR:SAP,SAP,DAX30
-ETR:SDF,K+S,DAX30
-ETR:SIE,SIEMENS,DAX30
-ETR:TKA,THYSSENKRUPP,DAX30
-ETR:VOW3,VOLKSWAGEN,DAX30
+#ETR:ADS,ADIDAS,DAX30
+#ETR:ALV,ALLIANZ,DAX30
+#ETR:BAS,BASF,DAX30
+#ETR:BAYN,BAYER,DAX30
+#ETR:BEI,BEIERSDORF,DAX30
+#ETR:BMW,BMW,DAX30
+#ETR:CBK,COMMERZBANK,DAX30
+#ETR:DAI,DAIMLER,DAX30
+#ETR:DB1,DEUTSCHE BOERSE,DAX30
+#ETR:DBK,DEUTSCHE BANK,DAX30
+#ETR:DPW,DEUTSCHE POST,DAX30
+#ETR:DTE,DEUTSCHE TELEKOM,DAX30
+#ETR:EOAN,E.ON,DAX30
+#ETR:FME,FRESENIUS MED CARE,DAX30
+#ETR:FRE,FRESENIUS,DAX30
+#ETR:HEI,HEIDELBERGCEMENT,DAX30
+#ETR:HEN3,HENKEL,DAX30
+#ETR:IFX,INFINEON TECHNOLO,DAX30
+#ETR:LHA,DT.LUFTHANSA,DAX30
+#ETR:LIN,LINDE,DAX30
+#ETR:MAN,MAN,DAX30
+#ETR:MEO,METRO,DAX30
+#ETR:MRK,MERCK,DAX30
+#ETR:MUV2,MUNICHRE,DAX30
+#ETR:RWE,RWE,DAX30
+#ETR:SAP,SAP,DAX30
+#ETR:SDF,K+S,DAX30
+#ETR:SIE,SIEMENS,DAX30
+#ETR:TKA,THYSSENKRUPP,DAX30
+#ETR:VOW3,VOLKSWAGEN,DAX30
 ########################################        FTSE100     ###################################
 #LON:AAL,ANGLO AMERICAN,FTSE100
 #LON:ABF,ASSOCIAT BRIT FOODS,FTSE100
