--- a/YahooDownload.user.cfg
+++ b/YahooDownload.user.cfg
@@ -25,6 +25,8 @@ PTTRX,PIMCO FUNDS TOTAL,BOND
 SEA,SHIPPING,SECTORS
 SHY,1-3 YEAR TBONDS,SECTORS
 SMH,Semiconductors,SECTORS
+SPYG,S&P 500 Growth,INDICES
+SPYV,S&P 500 Value,INDICES
 TAN,Guggenheim Solar ,SECTORS
 THD,iShares MSCI Thailand,FUND
 TLT,20+ Years T-Bonds,BOND
