Add Intraday ETF

--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -70,12 +70,15 @@ FB,INT_US_FACEBOOK,INTRADAY
 FRA:VOW,INT_VOLKSWAGEN,INTRADAY
 FXE,INT_FX_EUR,INTRADAY
 FXY,INT_FX_JPY,INTRADAY
+GLD,INT_ETF_GOLD,INTRADAY
 GOOG,INT_US_GOOGLE,INTRADAY
 IBB,INT_IND_BIOTECHS,INTRADAY
 INDEXDB:DAX,INT_IND_DAX30,INTRADAY
 INDEXEURO:PX1,INT_IND_CAC40,INTRADAY
 MSFT,INT_US_MICROSOFT,INTRADAY
 QQQ,INT_IND_QQQ,INTRADAY
+SLV,INT_ETF_SILVER,INTRADAY
 SPY,INT_IND_SPY,INTRADAY
 TWTR,INT_US_TWITTER,INTRADAY
+UNG,INT_ETF_NATURAL GAS,INTRADAY
 XIV,INT_XIV,INTRADAY
