--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -19,3 +19,4 @@ DE000CD09MP9,CBFR,TURBO BEST USD_JPY PUT 120
 DE000CD09MP9,CBFR,TURBO BEST USD_JPY PUT 117
 DE000CK9SGP1,CBFR,TURBO BEST USD_JPY CALL 96.6
 DE000CD21RX7,CBFR,TURBO PUT VIX 33
+DE000CD9D6T9,CBFR,TURBO CALL VIX 11
