--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -76,6 +76,7 @@ IBB,INT_IND_BIOTECHS,INTRADAY
 INDEXDB:DAX,INT_IND_DAX30,INTRADAY
 INDEXEURO:PX1,INT_IND_CAC40,INTRADAY
 MSFT,INT_US_MICROSOFT,INTRADAY
+NIB,INT_ETF_COCOA,INTRADAY
 QQQ,INT_IND_QQQ,INTRADAY
 SLV,INT_ETF_SILVER,INTRADAY
 SPY,INT_IND_SPY,INTRADAY
