--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -15,7 +15,6 @@ DE000CN50GA6,CBFR,TURBO McDonalds PUT 142
 DE000CN4ZZF5,CBFR,TURBO McDonalds CALL 97
 DE000CN4Y8A4,CBFR,TURBO COFFEE CALL 0.94
 DE000CN1H302,CBFR,TURBO COFFEE PUT 1.7
-DE000CD09MP9,CBFR,TURBO BEST USD_JPY PUT 120
-DE000CD09MP9,CBFR,TURBO BEST USD_JPY PUT 117
+DE000CR7M784,CBFR,TURBO BEST USD_JPY PUT 125
 DE000CK9SGP1,CBFR,TURBO BEST USD_JPY CALL 96.6
 DE000CD21RX7,CBFR,TURBO PUT VIX 33
