--- a/GoogleDownload.user.cfg
+++ b/GoogleDownload.user.cfg
@@ -1,3 +1,4 @@
 # Personal Google download config file
+INDEXEURO:VCAC,VCAC,INDICATOR
 LON:GKP,Gulf Keystone Petroleum Limited,FTSE100
 NOK,Nokia Corporation (ADR),USER1
