--- a/YahooDownload.cfg
+++ b/YahooDownload.cfg
@@ -37,6 +37,8 @@ FXI,China,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/cou
 RSX,Russia,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_rsx.csv
 PIN,India,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_pin.csv
 ARGT,Argentina,COUNTRY
+EZA,South Africa,COUNTRY
+TUR,Turkey,COUNTRY
 ########################################       Commodities      ################################
 GSG,ISHARES GSCI COMMODITY,COMMODITY
 GLD,GOLD,COMMODITY,http://www.sentimentrader.com/subscriber/icharts/indicator/etf_gld.csv
