--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -32,6 +32,7 @@ EPA:EKI,INT_EKINOPS,INTRADAY
 EPA:ENGI,INT_ENGIE,INTRADAY
 EPA:ERA,INT_ERAMET,INTRADAY
 EPA:FP,INT_TOTAL,INTRADAY
+EPA:GBB,INT_BOURBON,INTRADAY
 EPA:GLE,INT_SOCIETE GENERALE,INTRADAY
 EPA:GNFT,INT_GENFIT,INTRADAY
 EPA:GOE,INT_GROUPE GORGE,INTRADAY
@@ -78,6 +79,7 @@ MSFT,INT_US_MICROSOFT,INTRADAY
 NIB,INT_ETF_COCOA,INTRADAY
 QQQ,INT_IND_QQQ,INTRADAY
 SLV,INT_ETF_SILVER,INTRADAY
+SNAP,INT_US_SNAPCHAT,INTRADAY
 SPY,INT_IND_SPY,INTRADAY
 TWTR,INT_US_TWITTER,INTRADAY
 UNG,INT_ETF_NATURAL GAS,INTRADAY
