--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -15,6 +15,7 @@ EPA:ALO,INT_ALSTOM,INTRADAY
 EPA:ALT,INT_ALTRAN,INTRADAY
 EPA:ALVER,INT_VERGNET SA,INTRADAY
 EPA:AREVA,INT_AREVA,INTRADAY
+EPA:AWOX,INT_AWOX,INTRADAY
 EPA:BNP,INT_BNP PARIBAS,INTRADAY
 EPA:BX4,INT_LYXOR BX4,INTRADAY
 EPA:CA,INT_CARREFOUR,INTRADAY
