--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -11,11 +11,11 @@ DE000CZ5MTB8,CBFR,TURBO BEST GOLD PUT 1385
 DE000CD094C3,CBFR,TURBO BEST GOLD CALL 1059
 DE000CR5V516,CBFR,TURBO BEST SILVER PUT 21.41
 DE000CN1HHP6,CBFR,TURBO BEST SILVER CALL 12.11
-DE000CN50GA6,CBFR,TURBO McDonalds PUT 142
-DE000CN4ZZF5,CBFR,TURBO McDonalds CALL 97
 DE000CN4Y8A4,CBFR,TURBO COFFEE CALL 0.94
 DE000CN1H302,CBFR,TURBO COFFEE PUT 1.7
 DE000CR7M784,CBFR,TURBO BEST USD_JPY PUT 125
 DE000CK9SGP1,CBFR,TURBO BEST USD_JPY CALL 96.6
-DE000CD21RX7,CBFR,TURBO PUT VIX 33
-DE000CD9D6T9,CBFR,TURBO CALL VIX 11
+DE000CD21RX7,CBFR,TURBO VIX PUT 33
+DE000CE4V829,CBFR,TURBO VIX CALL 8.1
+DE000CD9FRB4,CBFR,TURBO COCOA PUT 2600
+DE000CE4WE31,CBFR,TURBO COCOA CALL 1230
