--- a/YahooIntradayDownload.user.cfg
+++ b/YahooIntradayDownload.user.cfg
@@ -6,5 +6,6 @@ EURTRY=X,INT_FX_EUR_TRY,INTRADAY
 EURUSD=X,INT_FX_EUR_USD,INTRADAY
 GBPUSD=X,INT_FX_GBP_USD,INTRADAY
 GD.AT,INT_IND_ATHEN INDEX,INTRADAY
+JJC,INT_ETF_COPPER,INTRADAY
 USDCAD=X,INT_FX_USD_CAD,INTRADAY
 USDJPY=X,INT_FX_USD_JPY,INTRADAY
