Add Commodity ETF to intraday

--- a/YahooDownload.user.cfg
+++ b/YahooDownload.user.cfg
@@ -16,6 +16,7 @@ FB,Facebook,SP500
 GDX,Gold Miners,SECTORS
 GDXJ,Gold Miners Junior,SECTORS
 GGOV,ProShares German Bunds,BOND
+GREK,Greece,COUNTRY
 HIO,Western Asset High Hield,BOND
 IBB,iShares BioTechs,SECTORS
 IBCX.L,EURO CORP BOND,BOND
