--- a/YahooDownload.user.cfg
+++ b/YahooDownload.user.cfg
@@ -34,5 +34,6 @@ TLT,20+ Years T-Bonds,BOND
 TOU.PA,TOUPARGEL GROUPE,EURONEXT
 TWTR,TWITTER,SP500
 VLTSA.PA,VOLTALIA,EURONEXT
+VOW.DE,VOLKSWAGEN,USER1
 XME,METAL & MINING,SECTORS
 XOP,OIL & GAS EXPLORER,SECTORS
