--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -84,3 +84,4 @@ SNAP,INT_US_SNAPCHAT,INTRADAY
 SPY,INT_IND_SPY,INTRADAY
 TWTR,INT_US_TWITTER,INTRADAY
 UNG,INT_ETF_NATURAL GAS,INTRADAY
+VIX,INT_VIX,INTRADAY
