--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -1,18 +1,8 @@
 # Personal Google download config file
-$TRIN,TRIN,INDICATOR
-#$TRIN_LOG,TRIN_LOG,INDICATOR
-#$TRIN_SUM,TRIN_SUM,INDICATOR
-#$TRIN_LOG_SUM,TRIN_LOG_SUM,INDICATOR
-#$ADDT,Total Advance Decline Difference,INDICATOR
-#$ADRT,Total Advance Decline Ratio,INDICATOR
-#$AVRT,Total Advance Decline Volume Ratio,INDICATOR
-#$AVDT,Total Advances Declines Volume Difference,INDICATOR
-#$ADVT,Total Advancing Stocks,INDICATOR
-#$AVVT,Total Advancing Volume,INDICATOR
 ########################################       Countries      ################################
+SPY,SPY,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/breadth_sector_spy_50.csv
 QQQ,QQQ,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/etf_qqq.csv
 IWM,IWM,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/etf_iwm.csv
-SPY,SPY,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/breadth_sector_spy_50.csv
 EWA,Australia,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_ewa.csv
 EWC,Canada,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_ewc.csv
 EWG,Germany,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_ewg.csv
@@ -86,3 +76,14 @@ FXS,SWEDISH KRONA,CURRENCY
 FXA,AUSTRALIAN DOLLAR,CURRENCY
 FXY,JAPANESE YEN,CURRENCY
 FXC,CANADIAN DOLLAR,CURRENCY
+#########################################     INDICATORS     #########################################
+$TRIN,TRIN,INDICATOR
+#$TRIN_LOG,TRIN_LOG,INDICATOR
+#$TRIN_SUM,TRIN_SUM,INDICATOR
+#$TRIN_LOG_SUM,TRIN_LOG_SUM,INDICATOR
+#$ADDT,Total Advance Decline Difference,INDICATOR
+#$ADRT,Total Advance Decline Ratio,INDICATOR
+#$AVRT,Total Advance Decline Volume Ratio,INDICATOR
+#$AVDT,Total Advances Declines Volume Difference,INDICATOR
+#$ADVT,Total Advancing Stocks,INDICATOR
+#$AVVT,Total Advancing Volume,INDICATOR
