--- a/YahooIntradayDownload.user.cfg
+++ b/YahooIntradayDownload.user.cfg
@@ -1,14 +1,14 @@
 # Personal Yahoo download config file
-^VIX,INT_VOLATILITY S&P 500,INTRADAY
-BAL,INT_ETF_COTTON,INTRADAY
-EURGBP=X,INT_FX_EUR_GBP,INTRADAY
-EURJPY=X,INT_FX_EUR_JPY,INTRADAY
-EURTRY=X,INT_FX_EUR_TRY,INTRADAY
-EURUSD=X,INT_FX_EUR_USD,INTRADAY
-GBPUSD=X,INT_FX_GBP_USD,INTRADAY
-GD.AT,INT_IND_ATHEN INDEX,INTRADAY
-JJC,INT_ETF_COPPER,INTRADAY
-JO,INT_ETF_COFFEE,INTRADAY
-USDCAD=X,INT_FX_USD_CAD,INTRADAY
-USDJPY=X,INT_FX_USD_JPY,INTRADAY
-USO,INT_ETF_OIL,INTRADAY
+# ^VIX,INT_VOLATILITY S&P 500,INTRADAY
+# EURGBP=X,INT_FX_EUR_GBP,INTRADAY
+# EURJPY=X,INT_FX_EUR_JPY,INTRADAY
+# EURTRY=X,INT_FX_EUR_TRY,INTRADAY
+# EURUSD=X,INT_FX_EUR_USD,INTRADAY
+# GBPUSD=X,INT_FX_GBP_USD,INTRADAY
+# USDCAD=X,INT_FX_USD_CAD,INTRADAY
+# USDJPY=X,INT_FX_USD_JPY,INTRADAY
+# GD.AT,INT_IND_ATHEN INDEX,INTRADAY
+# BAL,INT_ETF_COTTON,INTRADAY
+# JJC,INT_ETF_COPPER,INTRADAY
+# JO,INT_ETF_COFFEE,INTRADAY
+# USO,INT_ETF_OIL,INTRADAY
