--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -1,5 +1,2 @@
 # Personal Google download config file
-BAL,INT_ETF_COTTON,INTRADAY
-JJC,INT_ETF_COPPER,INTRADAY
-JO,INT_ETF_COFFEE,INTRADAY
-USO,INT_ETF_OIL,INTRADAY
+^EURGBP,INT_FX_EUR_GBP,INTRADAY
