--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -3,6 +3,7 @@ AAPL,INT_US_APPLE,INTRADAY
 AMS:GTO,INT_GEMALTO,INTRADAY
 AMS:MT,INT_ARCELOR MITTAL,INTRADAY
 BABA,INT_US_ALIBABA,INTRADAY
+BAL,INT_ETF_COTTON,INTRADAY
 EBR:SOLB,INT_SOLVAY,INTRADAY
 EPA:ABCA,INT_ABC ARBITRAGE,INTRADAY
 EPA:AC,INT_ACCOR,INTRADAY
@@ -67,6 +68,7 @@ EPA:UG,INT_PEUGEOT,INTRADAY
 EPA:VIE,INT_VEOLIA ENVIRONN.,INTRADAY
 EPA:VK,INT_VALLOUREC,INTRADAY
 EPA:ZC,INT_ZODIAC AEROSPACE,INTRADAY
+EURUSD,INT_FX_EURUSD,INTRADAY
 FB,INT_US_FACEBOOK,INTRADAY
 FRA:VOW,INT_VOLKSWAGEN,INTRADAY
 FXE,INT_FX_EUR,INTRADAY
@@ -76,6 +78,8 @@ GOOG,INT_US_GOOGLE,INTRADAY
 IBB,INT_IND_BIOTECHS,INTRADAY
 INDEXDB:DAX,INT_IND_DAX30,INTRADAY
 INDEXEURO:PX1,INT_IND_CAC40,INTRADAY
+JJC,INT_ETF_COPPER,INTRADAY
+JO,INT_ETF_COFFEE,INTRADAY
 MSFT,INT_US_MICROSOFT,INTRADAY
 NIB,INT_ETF_COCOA,INTRADAY
 QQQ,INT_IND_QQQ,INTRADAY
@@ -84,4 +88,5 @@ SNAP,INT_US_SNAPCHAT,INTRADAY
 SPY,INT_IND_SPY,INTRADAY
 TWTR,INT_US_TWITTER,INTRADAY
 UNG,INT_ETF_NATURAL GAS,INTRADAY
+USO,INT_ETF_OIL,INTRADAY
 VIX,INT_VIX,INTRADAY
