--- a/EuronextDownload.cfg
+++ b/EuronextDownload.cfg
@@ -1,6 +1,7 @@
 ISIN;NOM;SICOVAM;TICKER;GROUP     =>   BE0003470755;SOLVAY;;SOLB;CAC40
 FR0003500008;CAC40;;CAC40;INDICES
 ABC003500387;SP500;;SP500;INDICES
+ABC003500379;Nasdaq 100;;NDX;INDICES
 QS0011131826 ;CAC40NR;;CAC40NR;INDICES
 FR0003999481;SBF120;;SBF120;INDICES
 EU0009658145;EURO STOXX 50;;ESTX50;INDICES
