--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -84,6 +84,7 @@ QQQ,INT_IND_QQQ,INTRADAY
 SLV,INT_ETF_SILVER,INTRADAY
 SNAP,INT_US_SNAPCHAT,INTRADAY
 SPY,INT_IND_SPY,INTRADAY
+TSLA,INT_US_TESLA,INTRADAY
 TWTR,INT_US_TWITTER,INTRADAY
 UNG,INT_ETF_NATURAL GAS,INTRADAY
 USO,INT_ETF_OIL,INTRADAY
