Remove Bond Rates

--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -46,9 +46,9 @@ PALL,PALLADIUM,COMMODITY
 PPLT,PLATINUM,COMMODITY
 WOOD,WOOD,COMMODITY
 ########################################        Bonds       ###################################
-$FVX,T-NOTE 5-YEAR RATE,BOND
-$TNX,T-NOTE 10-YEAR RATE,BOND
-$TYX,T-NOTE 30-YEAR RATE,BOND
+#$FVX,T-NOTE 5-YEAR RATE,BOND
+#$TNX,T-NOTE 10-YEAR RATE,BOND
+#$TYX,T-NOTE 30-YEAR RATE,BOND
 LQD,INVEST GRADE BOND,BOND
 JNK,HIGH YIELD BOND,BOND
 MUB,MUNI BOND,BOND
@@ -77,7 +77,7 @@ FXA,AUSTRALIAN DOLLAR,CURRENCY
 FXY,JAPANESE YEN,CURRENCY
 FXC,CANADIAN DOLLAR,CURRENCY
 #########################################     INDICATORS     #########################################
-$TRIN,TRIN,INDICATOR
+#$TRIN,TRIN,INDICATOR
 #$TRIN_LOG,TRIN_LOG,INDICATOR
 #$TRIN_SUM,TRIN_SUM,INDICATOR
 #$TRIN_LOG_SUM,TRIN_LOG_SUM,INDICATOR
