--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -87,3 +87,4 @@ FXC,CANADIAN DOLLAR,CURRENCY
 #$AVDT,Total Advances Declines Volume Difference,INDICATOR
 #$ADVT,Total Advancing Stocks,INDICATOR
 #$AVVT,Total Advancing Volume,INDICATOR
+#$VIX,VIX,INDICATOR
