--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -20,6 +20,8 @@ PIN,India,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/cou
 ARGT,Argentina,COUNTRY
 EZA,South Africa,COUNTRY
 TUR,Turkey,COUNTRY
+########################################         Futures        ################################
+SIY00,Silver Cash,COMMODITY
 ########################################       Commodities      ################################
 GSG,ISHARES GSCI COMMODITY,COMMODITY
 GLD,GOLD,COMMODITY,http://www.sentimentrader.com/subscriber/icharts/indicator/etf_gld.csv
