--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -21,8 +21,24 @@ ARGT,Argentina,COUNTRY
 EZA,South Africa,COUNTRY
 TUR,Turkey,COUNTRY
 ########################################         Futures        ################################
-SIY00,Silver Cash,COMMODITY
-########################################       Commodities      ################################
+#SIY00,Silver Cash,COMMODITY
+#GCY00,Gold Cash,COMMODITY
+#HGY00,Copper Cash,COMMODITY
+#CLY00,Oil Cash,COMMODITY
+#PLY00,Platinum Cash,COMMODITY
+#PAY00,Palladium Cash,COMMODITY
+#ZWY00,Wheat Cash,COMMODITY
+#ZCY00,Corn Cash,COMMODITY
+#VIY00,VIX Cash,INDICATOR
+#CTY00,Cotton Cash,COMMODITY
+#KCY00,Coffee Cash,COMMODITY
+#CCY00,Cocoa Cash,COMMODITY
+#SBY00,Sugar Cash,COMMODITY
+#LSY00,Lumber Cash,COMMODITY
+#ZTY00,2-Year T-Note Cash,BOND
+#ZFY00,5-Year T-Note Cash,BOND
+#ZNY00,10-Year T-Note Cash,BOND
+#######################################       Commodities      ################################
 GSG,ISHARES GSCI COMMODITY,COMMODITY
 GLD,GOLD,COMMODITY,http://www.sentimentrader.com/subscriber/icharts/indicator/etf_gld.csv
 SLV,SILVER,COMMODITY,http://www.sentimentrader.com/subscriber/icharts/indicator/etf_slv.csv
