--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -67,6 +67,7 @@ EPA:VIE,INT_VEOLIA ENVIRONN.,INTRADAY
 EPA:VK,INT_VALLOUREC,INTRADAY
 EPA:ZC,INT_ZODIAC AEROSPACE,INTRADAY
 EURUSD,INT_FX_EURUSD,INTRADAY
+EURGBP,INT_FX_EURGBP,INTRADAY
 FB,INT_US_FACEBOOK,INTRADAY
 FRA:VOW,INT_VOLKSWAGEN,INTRADAY
 FXE,INT_FX_EUR,INTRADAY
