--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -33,6 +33,7 @@ EPA:EKI,INT_EKINOPS,INTRADAY
 EPA:ENGI,INT_ENGIE,INTRADAY
 EPA:ERA,INT_ERAMET,INTRADAY
 EPA:FP,INT_TOTAL,INTRADAY
+EPA:FTI,INT_TECHNIP,INTRADAY
 EPA:GBB,INT_BOURBON,INTRADAY
 EPA:GLE,INT_SOCIETE GENERALE,INTRADAY
 EPA:GNFT,INT_GENFIT,INTRADAY
