--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -57,7 +57,7 @@ UNG,NATURAL GAS,COMMODITY,http://www.sentimentrader.com/subscriber/icharts/indic
 JJC,COPPER,COMMODITY
 SLX,STEEL,COMMODITY
 KOL,COAL,COMMODITY
-JJU,ALUMINIUM,COMMODITY
+#JJU,ALUMINIUM,COMMODITY
 JJN,NICKEL,COMMODITY
 JJT,TIN,COMMODITY
 PALL,PALLADIUM,COMMODITY
