--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -88,3 +88,4 @@ TWTR,INT_US_TWITTER,INTRADAY
 UNG,INT_ETF_NATURAL GAS,INTRADAY
 USO,INT_ETF_OIL,INTRADAY
 VIX,INT_VIX,INTRADAY
+EURGBP,INT_FX_EURGBP,INTRADAY
