UPDATE GOOGLE USer

--- a/GoogleDownload.user.cfg
+++ b/GoogleDownload.user.cfg
@@ -1,3 +1,18 @@
 # Personal Google download config file
-LON:GKP,Gulf Keystone Petroleum Limited,FTSE100
-NOK,Nokia Corporation (ADR),USER1
+#CMXC,Cell MedX Corp,USER1
+#FNJN,Finjan Holdings Inc.,USER1
+#GRPV,Gripevine Inc,USER1
+#ITUS,ITUS Corp,USER1
+#LOTE,Lot78 Inc,USER1
+#LRGR,Golden Edge Entertainment Inc,USER1
+#LWLG,Lightwave Logic Inc.,USER1
+#NAKD,Naked Brand Group Inc,USER1
+#NGTF,NightFood Hldg Inc,USER1
+#OTCMKTS:ACCA,Acacia Diversified Holdings Inc,USER1
+#PTLF,Petlife Pharmaceuticals Inc,USER1
+#RADA,RADA Electronic Ind. Ltd.,USER1
+#SPEX,Spherix Inc,USER1
+#SPYR,SPYR Inc,USER1
+#TSSI,TSS Inc,USER1
+#TWOH,Innovative Product Opportunities Inc,USER1
+#ZZZOF,ZINC ONE RES INC COM NPV,USER1
