--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -1,5 +1,6 @@
 # Personal Google download config file
 AAPL,INT_US_APPLE,INTRADAY
+AMPE,INT_US_AMPIO PHARMACEUTICALS,INTRADAY
 AMS:GTO,INT_GEMALTO,INTRADAY
 AMS:MT,INT_ARCELOR MITTAL,INTRADAY
 BABA,INT_US_ALIBABA,INTRADAY
@@ -65,6 +66,7 @@ EPA:UG,INT_PEUGEOT,INTRADAY
 EPA:VIE,INT_VEOLIA ENVIRONN.,INTRADAY
 EPA:VK,INT_VALLOUREC,INTRADAY
 EPA:ZC,INT_ZODIAC AEROSPACE,INTRADAY
+EURGBP,INT_FX_EURGBP,INTRADAY
 EURUSD,INT_FX_EURUSD,INTRADAY
 FB,INT_US_FACEBOOK,INTRADAY
 FRA:VOW,INT_VOLKSWAGEN,INTRADAY
@@ -88,4 +90,3 @@ TWTR,INT_US_TWITTER,INTRADAY
 UNG,INT_ETF_NATURAL GAS,INTRADAY
 USO,INT_ETF_OIL,INTRADAY
 VIX,INT_VIX,INTRADAY
-EURGBP,INT_FX_EURGBP,INTRADAY
