--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -65,7 +65,7 @@ PPLT,PLATINUM,COMMODITY
 WOOD,WOOD,COMMODITY
 ########################################        Bonds       ###################################
 #$FVX,T-NOTE 5-YEAR RATE,BOND
-#$TNX,T-NOTE 10-YEAR RATE,BOND
+TNX,T-NOTE 10-YEAR RATE,BOND
 #$TYX,T-NOTE 30-YEAR RATE,BOND
 LQD,INVEST GRADE BOND,BOND
 JNK,HIGH YIELD BOND,BOND
