--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -65,6 +65,7 @@ EPA:UG,INT_PEUGEOT,INTRADAY
 EPA:VIE,INT_VEOLIA ENVIRONN.,INTRADAY
 EPA:VK,INT_VALLOUREC,INTRADAY
 EPA:ZC,INT_ZODIAC AEROSPACE,INTRADAY
+EURGBP,INT_FX_EURGBP,INTRADAY
 EURUSD,INT_FX_EURUSD,INTRADAY
 FB,INT_US_FACEBOOK,INTRADAY
 FRA:VOW,INT_VOLKSWAGEN,INTRADAY
@@ -88,4 +89,4 @@ TWTR,INT_US_TWITTER,INTRADAY
 UNG,INT_ETF_NATURAL GAS,INTRADAY
 USO,INT_ETF_OIL,INTRADAY
 VIX,INT_VIX,INTRADAY
-EURGBP,INT_FX_EURGBP,INTRADAY
+XIV,INT_XIV,INTRADAY
