--- a/GoogleDownload.user.cfg
+++ b/GoogleDownload.user.cfg
@@ -1,2 +1,4 @@
 # Personal Google download config file
 AMPE,Ampio Pharmaceuticals Inc,USER1
+BRVVF,Quantum Cobalt Corp,User1
+KERMF,Kerr Mines Inc,User1
