--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -81,6 +81,7 @@ JJC,INT_ETF_COPPER,INTRADAY
 JO,INT_ETF_COFFEE,INTRADAY
 MSFT,INT_US_MICROSOFT,INTRADAY
 NIB,INT_ETF_COCOA,INTRADAY
+NVDA,INT_US_NVIDIA,INTRADAY
 QQQ,INT_IND_QQQ,INTRADAY
 SLV,INT_ETF_SILVER,INTRADAY
 SNAP,INT_US_SNAPCHAT,INTRADAY
