Add Exchange in Google.cfg

--- a/GoogleDownload.user.cfg
+++ b/GoogleDownload.user.cfg
@@ -1,4 +1,4 @@
 # Personal Google download config file
 AMPE,Ampio Pharmaceuticals Inc,USER1
-BRVVF,Quantum Cobalt Corp,User1
-KERMF,Kerr Mines Inc,User1
+OTCMKTS:BRVVF,Quantum Cobalt Corp,USER1
+OTCMKTS:KERMF,Kerr Mines Inc,USER1
