--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -83,6 +83,7 @@ MSFT,INT_US_MICROSOFT,INTRADAY
 NIB,INT_ETF_COCOA,INTRADAY
 NVDA,INT_US_NVIDIA,INTRADAY
 QQQ,INT_IND_QQQ,INTRADAY
+SGG,INT_ETF_SUGAR,INTRADAY
 SLV,INT_ETF_SILVER,INTRADAY
 SNAP,INT_US_SNAPCHAT,INTRADAY
 SPY,INT_IND_SPY,INTRADAY
