Fix Commerzbank TURBO

--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -1,18 +1,23 @@
 ISIN,MARKET,NAME
-DE000CK535Z7,CBFR,TURBO BEST CAC40 CALL 3000
-DE000CR7P1R2,CBFR,TURBO BEST CAC40 PUT 6000
-DE000CN83UT8,CBFR,TURBO BEST CRUDE CALL 19
-DE000CD07RP2,CBFR,TURBO BEST EUROBUND PUT 180
+DE000CK535Z7,CBFR,TURBO CAC40 CALL 3000
+DE000CE4XHR4,CBFR,TURBO CAC40 PUT 6000
+DE000CD07SS4,CBFR,TURBO CRUDE CALL 33
+DE000CD23SG6,CBFR,TURBO CRUDE PUT 70
+DE000CE8Z987,CBFR,TURBO OAT PUT 170
+DE000CB6TL98,CBFR,TURBO OAT CALL 132
 DE000CR5TNW2,CBFR,TURBO COPPER CALL 1.91
-DE000CN1H7D4,CBFR,TURBO EURUSD PUT 
-DE000CZ5MTB8,CBFR,TURBO BEST GOLD PUT 1385
-DE000CR5V516,CBFR,TURBO BEST SILVER PUT 21.41
-DE000CN1HHP6,CBFR,TURBO BEST SILVER CALL 12.11
-DE000CN4Y8A4,CBFR,TURBO COFFEE CALL 0.94
+DE000CM44TG1,CBFR,TURBO COPPER PUT 4.8
+DE000CK9PBW4,CBFR,TURBO GOLD PUT 1940
+DE000CD09KG2,CBFR,TURBO GOLD CALL 820
+DE000CM94EH6,CBFR,TURBO SILVER PUT 53
+DE000CR2USE4,CBFR,TURBO SILVER CALL 10
+DE000CN82HU5,CBFR,TURBO EURUSD CALL 0.89 
+DE000CZ8WZ78,CBFR,TURBO EURUSD PUT 1.55
+DE000CV2DPM3,CBFR,TURBO COFFEE CALL 0.91
 DE000CN1H302,CBFR,TURBO COFFEE PUT 1.7
-DE000CR7M784,CBFR,TURBO BEST USD_JPY PUT 125
-DE000CK9SGP1,CBFR,TURBO BEST USD_JPY CALL 96.6
-DE000CD21RX7,CBFR,TURBO VIX PUT 33
-DE000CE4V829,CBFR,TURBO VIX CALL 8.1
+DE000CR7M784,CBFR,TURBO USD_JPY PUT 125
+DE000CK9SGP1,CBFR,TURBO USD_JPY CALL 96.6
+DE000CM94YH4,CBFR,TURBO VIX PUT 97
+DE000CE8ZHG3,CBFR,TURBO VIX CALL 8.1
 DE000CD9FRB4,CBFR,TURBO COCOA PUT 2600
-DE000CE4WE31,CBFR,TURBO COCOA CALL 1230
+DE000CE8YT20,CBFR,TURBO COCOA CALL 1520
