--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -1,1 +1,7 @@
 # Personal Google download config file
+8894,CC,FUT_COCOA,FUTURE
+8849,CL,FUT_CRUDE_OIL,FUTURE
+8884,VIX,FUT_VIX,FUTURE
+8830,GC,FUT_GOLD,FUTURE
+8836,SI,FUT_SILVER,FUTURE
+1,EURUSD,FUT_EURUSD,FUTURE
