Add BartChartintraday futures

--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -4,4 +4,8 @@
 8884,VIX,FUT_VIX,FUTURE
 8830,GC,FUT_GOLD,FUTURE
 8836,SI,FUT_SILVER,FUTURE
+8862,NG,FUT_NATURAL_GAS,FUTURE
 1,EURUSD,FUT_EURUSD,FUTURE
+3,USDJPY,FUT_USDJPY,FUTURE
+6,EURGBP,FUT_EURGBP,FUTURE
+28719,FOAT,FUT_OAT_FUTURE,FUTURE
