--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -7,5 +7,9 @@
 8862,NG,FUT_NATURAL_GAS,FUTURE
 1,EURUSD,FUT_EURUSD,FUTURE
 3,USDJPY,FUT_USDJPY,FUTURE
+2,GBPUSD,FUT_GBPUSD,FUTURE
 6,EURGBP,FUT_EURGBP,FUTURE
 28719,FOAT,FUT_OAT_FUTURE,FUTURE
+945629,BTC,FUT_BITCOIN,FUTURE
+8883,BTC,FUT_PALLADIUM,FUTURE
+8910,BTC,FUT_PLATINUM,FUTURE
