--- a/EuronextDownload.cfg
+++ b/EuronextDownload.cfg
@@ -2,13 +2,14 @@ ISIN;NOM;SICOVAM;TICKER;GROUP     =>   BE0003470755;SOLVAY;;SOLB;CAC40
 FR0003500008;CAC40;;CAC40;INDICES
 ABC003500387;SP500;;SP500;INDICES
 ABC003500379;Nasdaq 100;;NDX;INDICES
-QS0011131826 ;CAC40NR;;CAC40NR;INDICES
+QS0011131826;CAC40NR;;CAC40NR;INDICES
+QS0011131834;CAC40GR;;CAC40GR;INDICES
+QS0011213756;CAC Mid & Small GR;;CMSG;INDICES
 FR0003999481;SBF120;;SBF120;INDICES
 EU0009658145;EURO STOXX 50;;ESTX50;INDICES
 FR0010411884;BX4;;BX4;FUND
 FR0010592014;LVC;;LVC;FUND
 FR0010405431;Grece;;GRE;COUNTRY
-FR0007052782;CAC-ETF;;CAC-ETF;FUND
 ABC000000010;Or (once en $);;OR;FOREX
 ABC000000011;Argent (once en $);;ARGENT;FOREX
 ABC000000012;AUD-JPY;;AUDJPY;FOREX
