--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -18,6 +18,6 @@ DE000CN1H302,CBFR,TURBO COFFEE PUT 1.7
 DE000CR7M784,CBFR,TURBO USD_JPY PUT 125
 DE000CK9SGP1,CBFR,TURBO USD_JPY CALL 96.6
 DE000CM94YH4,CBFR,TURBO VIX PUT 97
-DE000CE8ZHG3,CBFR,TURBO VIX CALL 8.1
+DE000CV2ETH3,CBFR,TURBO VIX CALL 5.4
 DE000CD9FRB4,CBFR,TURBO COCOA PUT 2600
 DE000CE8YT20,CBFR,TURBO COCOA CALL 1520
