--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -13,4 +13,5 @@
 945629,BTC,FUT_BITCOIN,FUTURE
 8883,PLD,FUT_PALLADIUM,FUTURE
 8910,PLT,FUT_PLATINUM,FUTURE
-8839,ES,FUT_SP500,FUTURE
+8839,ES,FUT_IND_SP500,FUTURE
+8853,F40,FUT_IND_CAC40,FUTURE
