--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -66,6 +66,7 @@ GOOG,INT_US_GOOGLE,INTRADAY
 IBB,INT_IND_BIOTECHS,INTRADAY
 INDEXDB:DAX,INT_IND_DAX30,INTRADAY
 INDEXEURO:PX1,INT_IND_CAC40,INTRADAY
+INTC,INT_US_INTEL,INTRADAY
 MSFT,INT_US_MICROSOFT,INTRADAY
 NVDA,INT_US_NVIDIA,INTRADAY
 QQQ,INT_IND_QQQ,INTRADAY
