--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -6,6 +6,7 @@ BABA,INT_US_ALIBABA,INTRADAY
 EBR:SOLB,INT_SOLVAY,INTRADAY
 EPA:AC,INT_ACCOR,INTRADAY
 EPA:ACA,INT_CREDIT AGRICOLE,INTRADAY
+EPA:ALT,INT_ALTRAN,INTRADAY
 EPA:AF,INT_AIR FRANCE - KLM,INTRADAY
 EPA:AI,INT_AIR LIQUIDE SA,INTRADAY
 EPA:AIR,INT_AIRBUS,INTRADAY
@@ -13,12 +14,16 @@ EPA:ALCAR,INT_CARMAT,INTRADAY
 EPA:ALO,INT_ALSTOM,INTRADAY
 EPA:BNP,INT_BNP PARIBAS,INTRADAY
 EPA:BX4,INT_LYXOR BX4,INTRADAY
+EPA:CAP,INT_CAP GEMINI,INTRADAY
 EPA:CA,INT_CARREFOUR,INTRADAY
 EPA:CGG,INT_CGG,INTRADAY
+EPA:BN,INT_DANONE,INTRADAY
 EPA:CO,INT_CASINO,INTRADAY
 EPA:COX,INT_NICOX,INTRADAY
 EPA:CS,INT_AXA,INTRADAY
 EPA:DBG,INT_DERICHEBOURG,INTRADAY
+EPA:OR,INT_LOREAL,INTRADAY
+EPA:KER,INT_KERING,INTRADAY
 EPA:DG,INT_VINCI,INTRADAY
 EPA:ECP,INT_EUROPACORP,INTRADAY
 EPA:EDF,INT_EDF,INTRADAY
@@ -42,6 +47,7 @@ EPA:LOCAL,INT_SOLOCAL,INTRADAY
 EPA:LVC,INT_LYXOR LEV CAC 40,INTRADAY
 EPA:MBWS,INT_MARIE BRIZARD,INTRADAY
 EPA:MC,INT_LVMH,INTRADAY
+EPA:KN,INT_NATIXIS,INTRADAY
 EPA:MGIC,INT_MGI COUTIER,INTRADAY
 EPA:MRN,INT_MERSEN,INTRADAY
 EPA:MTU,INT_MANITOU,INTRADAY
