--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -3,6 +3,7 @@
 8849,CL,FUT_CRUDE_OIL,FUTURE
 8884,VIX,FUT_VIX,FUTURE
 8830,GC,FUT_GOLD,FUTURE
+8831,HG,FUT_COPPER,FUTURE
 8836,SI,FUT_SILVER,FUTURE
 8862,NG,FUT_NATURAL_GAS,FUTURE
 #1,EURUSD,FUT_FX_EURUSD,FUTURE
