Add Bund futures...

--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -83,7 +83,7 @@ XLP,CONSUMER STAPLES SECTOR,SECTORS,http://www.sentimentrader.com/subscriber/ich
 XLY,CONSUMER DISCRET SECTOR,SECTORS,http://www.sentimentrader.com/subscriber/icharts/indicator/etf_xly.csv
 XLV,HEALTH CARE SECTOR,SECTORS,
 XHB,HOME BUILDERS,SECTORS
-^HGX,PHLX HOUSING SECTOR,SECTORS
+#^HGX,PHLX HOUSING SECTOR,SECTORS
 IYT,TRANSPORT SECTOR,SECTORS
 ########################################     Currencies     ###################################
 UUP,US DOLLAR INDEX,CURRENCY
