Update Intraday alert

--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -10,7 +10,6 @@
 #3,USDJPY,FUT_FX_USDJPY,FUTURE
 #2,GBPUSD,FUT_FX_GBPUSD,FUTURE
 #6,EURGBP,FUT_FX_EURGBP,FUTURE
-28719,FOAT,FUT_OAT_FUTURE,FUTURE
 945629,BTC,FUT_BITCOIN,FUTURE
 8883,PLD,FUT_PALLADIUM,FUTURE
 8910,PLT,FUT_PLATINUM,FUTURE
@@ -18,3 +17,4 @@
 8853,F40,FUT_IND_CAC40,FUTURE
 8907,US,FUT_BOND_US,FUTURE
 8895,FGBL,FUT_BOND_EURO,FUTURE
+28719,FOAT,FUT_BOND_OAT,FUTURE
