Add BRENT Future

--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -1,6 +1,7 @@
 # Personal Google download config file
 8894,CC,FUT_COCOA,FUTURE
 8849,CL,FUT_CRUDE_OIL,FUTURE
+8883,CL,FUT_BRENT_OIL,FUTURE
 8884,VIX,FUT_VIX,FUTURE
 8830,GC,FUT_GOLD,FUTURE
 8831,HG,FUT_COPPER,FUTURE
