--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -6,24 +6,22 @@ BABA,INT_US_ALIBABA,INTRADAY
 EBR:SOLB,INT_SOLVAY,INTRADAY
 EPA:AC,INT_ACCOR,INTRADAY
 EPA:ACA,INT_CREDIT AGRICOLE,INTRADAY
-EPA:ALT,INT_ALTRAN,INTRADAY
 EPA:AF,INT_AIR FRANCE - KLM,INTRADAY
 EPA:AI,INT_AIR LIQUIDE SA,INTRADAY
 EPA:AIR,INT_AIRBUS,INTRADAY
 EPA:ALCAR,INT_CARMAT,INTRADAY
 EPA:ALO,INT_ALSTOM,INTRADAY
+EPA:ALT,INT_ALTRAN,INTRADAY
+EPA:BN,INT_DANONE,INTRADAY
 EPA:BNP,INT_BNP PARIBAS,INTRADAY
 EPA:BX4,INT_LYXOR BX4,INTRADAY
-EPA:CAP,INT_CAP GEMINI,INTRADAY
 EPA:CA,INT_CARREFOUR,INTRADAY
+EPA:CAP,INT_CAP GEMINI,INTRADAY
 EPA:CGG,INT_CGG,INTRADAY
-EPA:BN,INT_DANONE,INTRADAY
 EPA:CO,INT_CASINO,INTRADAY
 EPA:COX,INT_NICOX,INTRADAY
 EPA:CS,INT_AXA,INTRADAY
 EPA:DBG,INT_DERICHEBOURG,INTRADAY
-EPA:OR,INT_LOREAL,INTRADAY
-EPA:KER,INT_KERING,INTRADAY
 EPA:DG,INT_VINCI,INTRADAY
 EPA:ECP,INT_EUROPACORP,INTRADAY
 EPA:EDF,INT_EDF,INTRADAY
@@ -37,20 +35,23 @@ EPA:GBB,INT_BOURBON,INTRADAY
 EPA:GLE,INT_SOCIETE GENERALE,INTRADAY
 EPA:GNFT,INT_GENFIT,INTRADAY
 EPA:GOE,INT_GROUPE GORGE,INTRADAY
+EPA:GRE,INT_ETF_GREECE,INTRADAY
 EPA:ILD,INT_ILIAD,INTRADAY
 EPA:ING,INT_INGENICO,INTRADAY
 EPA:IPH,INT_INNATE PHARMA,INTRADAY
 EPA:IPS,INT_IPSOS,INTRADAY
 EPA:JCQ,INT_JACQUET METAL,INTRADAY
+EPA:KER,INT_KERING,INTRADAY
+EPA:KN,INT_NATIXIS,INTRADAY
 EPA:LAT,INT_LATECOERE,INTRADAY
 EPA:LOCAL,INT_SOLOCAL,INTRADAY
 EPA:LVC,INT_LYXOR LEV CAC 40,INTRADAY
 EPA:MBWS,INT_MARIE BRIZARD,INTRADAY
 EPA:MC,INT_LVMH,INTRADAY
-EPA:KN,INT_NATIXIS,INTRADAY
 EPA:MGIC,INT_MGI COUTIER,INTRADAY
 EPA:MRN,INT_MERSEN,INTRADAY
 EPA:MTU,INT_MANITOU,INTRADAY
+EPA:OR,INT_LOREAL,INTRADAY
 EPA:ORA,INT_ORANGE,INTRADAY
 EPA:RCO,INT_REMY COINTREAU,INTRADAY
 EPA:RI,INT_PERNOD RICARD,INTRADAY
