--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -7,10 +7,10 @@
 8831,HG,FUT_COPPER,FUTURE
 8836,SI,FUT_SILVER,FUTURE
 8862,NG,FUT_NATURAL_GAS,FUTURE
-#1,EURUSD,FUT_FX_EURUSD,FUTURE
-#3,USDJPY,FUT_FX_USDJPY,FUTURE
-#2,GBPUSD,FUT_FX_GBPUSD,FUTURE
-#6,EURGBP,FUT_FX_EURGBP,FUTURE
+1,FEURUSD,FUT_FX_EURUSD,FUTURE
+3,FUSDJPY,FUT_FX_USDJPY,FUTURE
+2,FGBPUSD,FUT_FX_GBPUSD,FUTURE
+#6,FEURGBP,FUT_FX_EURGBP,FUTURE
 945629,BTC,FUT_BITCOIN,FUTURE
 8883,PLD,FUT_PALLADIUM,FUTURE
 8910,PLT,FUT_PLATINUM,FUTURE
