--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -13,6 +13,7 @@ EWQ,France,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/co
 EWU,UK,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_ewu.csv
 EWW,Mexico,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_eww.csv
 EWZ,Brazil,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_ewz.csv
+EWY,South Corea,COUNTRY
 EEM,Emerging,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_eem.csv
 FXI,China,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_fxi.csv
 RSX,Russia,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_rsx.csv
