--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -16,6 +16,7 @@
 8910,PLT,FUT_PLATINUM,FUTURE
 8839,ES,FUT_IND_SP500,FUTURE
 8853,F40,FUT_IND_CAC40,FUTURE
+8826,DX30,FUT_IND_DAX30,FUTURE
 8907,US,FUT_BOND_US,FUTURE
 8895,FGBL,FUT_BOND_EURO,FUTURE
 28719,FOAT,FUT_BOND_OAT,FUTURE
