--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -63,6 +63,7 @@ EPA:SEQ,INT_SEQUANA,INTRADAY
 EPA:SGO,INT_SAINT GOBAIN,INTRADAY
 EPA:SOI,INT_SOITEC,INTRADAY
 EPA:STM,INT_STMICROELECTRONICS,INTRADAY
+EPA:SW,INT_SODEXO,INTRADAY
 EPA:UG,INT_PEUGEOT,INTRADAY
 EPA:VIE,INT_VEOLIA ENVIRONN.,INTRADAY
 EPA:VK,INT_VALLOUREC,INTRADAY
