--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -2,6 +2,7 @@
 AAPL,INT_US_APPLE,INTRADAY
 AMS:MT,INT_ARCELOR MITTAL,INTRADAY
 BABA,INT_US_ALIBABA,INTRADAY
+AMZN,INT_US_AMAZON,INTRADAY
 EBR:SOLB,INT_SOLVAY,INTRADAY
 EPA:AC,INT_ACCOR,INTRADAY
 EPA:ACA,INT_CREDIT AGRICOLE,INTRADAY
