--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -11,7 +11,7 @@
 3,FUSDJPY,FUT_FX_USDJPY,FUTURE
 2,FGBPUSD,FUT_FX_GBPUSD,FUTURE
 #6,FEURGBP,FUT_FX_EURGBP,FUTURE
-945629,BTC,FUT_BITCOIN,FUTURE
+1055949,BTC,FUT_BITCOIN,FUTURE
 8883,PLD,FUT_PALLADIUM,FUTURE
 8910,PLT,FUT_PLATINUM,FUTURE
 8839,ES,FUT_IND_SP500,FUTURE
