--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -10,6 +10,7 @@
 1,FEURUSD,FUT_FX_EURUSD,FUTURE
 3,FUSDJPY,FUT_FX_USDJPY,FUTURE
 2,FGBPUSD,FUT_FX_GBPUSD,FUTURE
+6,FEURGBP,FUT_FX_EURGBP,FUTURE
 #6,FEURGBP,FUT_FX_EURGBP,FUTURE
 1055949,BTC,FUT_BITCOIN,FUTURE
 8883,PLD,FUT_PALLADIUM,FUTURE
