Add VIX Leverage

--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -21,3 +21,5 @@ DE000CM94YH4,CBFR,TURBO VIX PUT 97
 DE000CV2ETH3,CBFR,TURBO VIX CALL 5.4
 DE000CD9FRB4,CBFR,TURBO COCOA PUT 2600
 DE000CE8YT20,CBFR,TURBO COCOA CALL 1520
+DE000CD9DKW0,CBFR,LEVERAGE VIX SHORT
+DE000CD9DKV2,CBFR,LEVERAGE VIX LONG
