--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -1,8 +1,8 @@
 # Personal Google download config file
 AAPL,INT_US_APPLE,INTRADAY
 AMS:MT,INT_ARCELOR MITTAL,INTRADAY
-BABA,INT_US_ALIBABA,INTRADAY
 AMZN,INT_US_AMAZON,INTRADAY
+BABA,INT_US_ALIBABA,INTRADAY
 EBR:SOLB,INT_SOLVAY,INTRADAY
 EPA:AC,INT_ACCOR,INTRADAY
 EPA:ACA,INT_CREDIT AGRICOLE,INTRADAY
@@ -11,6 +11,7 @@ EPA:AI,INT_AIR LIQUIDE SA,INTRADAY
 EPA:AIR,INT_AIRBUS,INTRADAY
 EPA:ALO,INT_ALSTOM,INTRADAY
 EPA:ALT,INT_ALTRAN,INTRADAY
+EPA:BEN,INT_BENETEAU,INTRADAY
 EPA:BN,INT_DANONE,INTRADAY
 EPA:BNP,INT_BNP PARIBAS,INTRADAY
 EPA:BX4,INT_LYXOR BX4,INTRADAY
