Add Coffee future

--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -1,5 +1,6 @@
 # Personal Google download config file
 8894,CC,FUT_COCOA,FUTURE
+8832,KC,FUT_COFFEE,FUTURE
 8849,CL,FUT_CRUDE_OIL,FUTURE
 8833,B,FUT_BRENT_OIL,FUTURE
 8884,VIX,FUT_VIX,FUTURE
