--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -86,6 +86,7 @@ XLV,HEALTH CARE SECTOR,SECTORS,
 XHB,HOME BUILDERS,SECTORS
 #^HGX,PHLX HOUSING SECTOR,SECTORS
 IYT,TRANSPORT SECTOR,SECTORS
+VNQ,REAL ESTATE,SECTORS
 ########################################     Currencies     ###################################
 UUP,US DOLLAR INDEX,CURRENCY
 FXE,EURO INDEX,CURRENCY
