Add Investing.com Tickers

--- a/BarChartIntradayDownload.user.cfg
+++ b/BarChartIntradayDownload.user.cfg
@@ -1,4 +1,4 @@
-# Personal Google download config file
+# Personal investing.com download config file
 8894,CC,FUT_COCOA,FUTURE
 8832,KC,FUT_COFFEE,FUTURE
 8849,CL,FUT_CRUDE_OIL,FUTURE
