--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -10,8 +10,14 @@
 8862,NG,FUT_NATURAL_GAS,FUTURE
 1,FEURUSD,FUT_FX_EURUSD,FUTURE
 3,FUSDJPY,FUT_FX_USDJPY,FUTURE
+9,FEURJPY,FUT_FX_EURJPY,FUTURE
+11,FGBPJPY,FUT_FX_GBPJPY,FUTURE
 2,FGBPUSD,FUT_FX_GBPUSD,FUTURE
 6,FEURGBP,FUT_FX_EURGBP,FUTURE
+16,FEURCAD,FUT_FX_EURCAD,FUTURE
+54,FGBPCAD,FUT_FX_GBPCAD,FUTURE
+51,FCADJPY,FUT_FX_CADJPY,FUTURE
+7,FUSDCAD,FUT_FX_USDCAD,FUTURE
 #6,FEURGBP,FUT_FX_EURGBP,FUTURE
 1055949,BTC,FUT_BITCOIN,FUTURE
 8883,PLD,FUT_PALLADIUM,FUTURE
