Fix ACCOR INtrday

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -30,7 +30,7 @@
 28719,FOAT,FUT_BOND_OAT,FUTURE
 # INTRADAY STOCKS
 13994,TSLA,INT_US_TESLA,INTRADAY
-386,AF,INT_ACCOR,INTRADAY
+386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
