--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -36,6 +36,7 @@
 7056,BEN,INT_BENETEAU,INTRADAY
 396,BNP,INT_BNP PARIBAS,INTRADAY
 6976,GBB,INT_BOURBON CORPORATION,INTRADAY
+404,CA,INT_CARREFOUR,INTRADAY
 6959,CO,INT_CASINO GUICHARD,INTRADAY
 7051,CGG,INT_CGG,INTRADAY
 407,ACA,INT_CREDIT AGRICOLE,INTRADAY
