Rename OIL Future

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -1,8 +1,8 @@
 # Personal investing.com download config file
 8894,CC,FUT_COCOA,FUTURE
 8832,KC,FUT_COFFEE,FUTURE
-8849,CL,FUT_CRUDE_OIL,FUTURE
-8833,B,FUT_BRENT_OIL,FUTURE
+8849,CL,FUT_OIL_CRUDE,FUTURE
+8833,B,FUT_OIL_BRENT,FUTURE
 8884,VIX,FUT_VIX,FUTURE
 8830,GC,FUT_GOLD,FUTURE
 8831,HG,FUT_COPPER,FUTURE
