Add Apple intraday

--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -12,7 +12,7 @@
 40664,EWU,UK,COUNTRY
 8933,EWW,Mexico,COUNTRY
 509,EWZ,Brazil,COUNTRY
-511:EWY,South Corea,COUNTRY
+511,EWY,South Corea,COUNTRY
 505,EEM,Emerging,COUNTRY
 512,FXI,China,COUNTRY
 38174,RSX,Russia,COUNTRY
