--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -18,7 +18,6 @@
 54,FGBPCAD,FUT_FX_GBPCAD,FUTURE
 51,FCADJPY,FUT_FX_CADJPY,FUTURE
 7,FUSDCAD,FUT_FX_USDCAD,FUTURE
-#6,FEURGBP,FUT_FX_EURGBP,FUTURE
 1055949,BTC,FUT_BITCOIN,FUTURE
 8883,PLD,FUT_PALLADIUM,FUTURE
 8910,PLT,FUT_PLATINUM,FUTURE
@@ -46,6 +45,7 @@
 395,ENGI,INT_ENGIE,INTRADAY
 6948,ERA,INT_ERAMET,INTRADAY
 6983,ILD,INT_ILIAD,INTRADAY
+7003,TRIA,INT_TRIGANO,INTRADAY
 7049,ING,INT_INGENICO GROUP,INTRADAY
 17795,IPH,INT_INNATE PHARMA,INTRADAY
 670,KER,INT_KERING,INTRADAY
