--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -1,13 +1,21 @@
 # Personal investing.com download config file
-8894,CC,FUT_COCOA,FUTURE
-8832,KC,FUT_COFFEE,FUTURE
-8849,CL,FUT_OIL_CRUDE,FUTURE
-8833,B,FUT_OIL_BRENT,FUTURE
-8884,VIX,FUT_VIX,FUTURE
-8830,GC,FUT_GOLD,FUTURE
-8831,HG,FUT_COPPER,FUTURE
-8836,SI,FUT_SILVER,FUTURE
-8862,NG,FUT_NATURAL_GAS,FUTURE
+#
+# COMMODITY
+#
+8894,CC,FUT_COM_COCOA,FUTURE
+8832,KC,FUT_COM_COFFEE,FUTURE
+8849,CL,FUT_COM_OIL_CRUDE,FUTURE
+8833,B,FUT_COM_OIL_BRENT,FUTURE
+8830,GC,FUT_COM_GOLD,FUTURE
+8831,HG,FUT_COM_COPPER,FUTURE
+8869,HG,FUT_COM_SUGAR,FUTURE
+8836,SI,FUT_COM_SILVER,FUTURE
+8862,NG,FUT_COM_NATURAL_GAS,FUTURE
+8883,PLD,FUT_COM_PALLADIUM,FUTURE
+8910,PLT,FUT_COM_PLATINUM,FUTURE
+#
+# FOREX
+#
 1,FEURUSD,FUT_FX_EURUSD,FUTURE
 3,FUSDJPY,FUT_FX_USDJPY,FUTURE
 9,FEURJPY,FUT_FX_EURJPY,FUTURE
@@ -19,18 +27,28 @@
 51,FCADJPY,FUT_FX_CADJPY,FUTURE
 7,FUSDCAD,FUT_FX_USDCAD,FUTURE
 1055949,BTC,FUT_BITCOIN,FUTURE
-8883,PLD,FUT_PALLADIUM,FUTURE
-8910,PLT,FUT_PLATINUM,FUTURE
+#
+# INDICES
+#
 8839,ES,FUT_IND_SP500,FUTURE
+8884,VIX,FUT_IND_VIX,FUTURE
 8853,F40,FUT_IND_CAC40,FUTURE
 8826,DX30,FUT_IND_DAX30,FUTURE
+#
+# BOND
+#
 8907,US,FUT_BOND_US,FUTURE
 8895,FGBL,FUT_BOND_EURO,FUTURE
 28719,FOAT,FUT_BOND_OAT,FUTURE
 13917,FOAT,FUT_BOND_BTP,FUTURE
-# INTRADAY STOCKS
+#
+# US STOCKS
+#
 13994,TSLA,INT_US_TESLA,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
+#
+# FR STOCKS
+#
 386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 393,CS,INT_AXA,INTRADAY
