Update Investing daily

--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -20,3 +20,32 @@
 44620,ARGT,Argentina,COUNTRY
 44491,EZA,South Africa,COUNTRY
 9244,TUR,Turkey,COUNTRY
+# Personal investing.com download config file
+#
+# COMMODITY
+#
+8894,CC,COCOA,COMMODITY
+8832,KC,COFFEE,COMMODITY
+8849,CL,OIL_CRUDE,COMMODITY
+8833,B,OIL_BRENT,COMMODITY
+8830,GC,GOLD,COMMODITY
+8831,HG,COPPER,COMMODITY
+8869,HG,SUGAR,COMMODITY
+8836,SI,SILVER,COMMODITY
+8862,NG,NATURAL_GAS,COMMODITY
+8883,PLD,PALLADIUM,COMMODITY
+8910,PLT,PLATINUM,COMMODITY
+#
+# FOREX
+#
+1,FEURUSD,EURUSD,FOREX
+3,FUSDJPY,USDJPY,FOREX
+9,FEURJPY,EURJPY,FOREX
+11,FGBPJPY,GBPJPY,FOREX
+2,FGBPUSD,GBPUSD,FOREX
+6,FEURGBP,EURGBP,FOREX
+16,FEURCAD,EURCAD,FOREX
+54,FGBPCAD,GBPCAD,FOREX
+51,FCADJPY,CADJPY,FOREX
+7,FUSDCAD,USDCAD,FOREX
+1055949,BTC,BITCOIN,FOREX
