--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -42,3 +42,6 @@
 7,FUSDCAD,USDCAD,FOREX
 3,FUSDJPY,USDJPY,FOREX
 172,DE30,DAX Future,INDICES
+44336,VIX,VIX,INDICES
+8884,VX,VIX Future,INDICES
+40671,VXX,VXX,INDICES
