--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -35,6 +35,8 @@
 16,FEURCAD,EURCAD,FOREX
 6,FEURGBP,EURGBP,FOREX
 9,FEURJPY,EURJPY,FOREX
+37,FEURNOK,EURNOK,FOREX
+61,FEURSEK,EURSEK,FOREX
 1,FEURUSD,EURUSD,FOREX
 54,FGBPCAD,GBPCAD,FOREX
 11,FGBPJPY,GBPJPY,FOREX
@@ -44,4 +46,5 @@
 172,DE30,DAX Future,INDICES
 44336,VIX,VIX,INDICES
 8884,VX,VIX Future,INDICES
+44337,VIX3M,VIX3M,INDICES
 40671,VXX,VXX,INDICES
