--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -55,5 +55,6 @@
 6981,SW,INT_SODEXO,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
+525,INT_SPY,INT_US_SPY,INTRADAY
 13994,TSLA,INT_US_TESLA,INTRADAY
 408,VK,INT_VALLOUREC,INTRADAY
