--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -30,6 +30,7 @@
 8884,VIX,FUT_IND_VIX,FUTURE
 386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
+7150,LAEP,INT_AVIATIONLATECOERE,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
 396,BNP,INT_BNP PARIBAS,INTRADAY
@@ -50,9 +51,11 @@
 47579,LVC,INT_LVC,INTRADAY
 6972,COX,INT_NICOX,INTRADAY
 409,ORA,INT_ORANGE,INTRADAY
+7079,RXPA,INT_RECYLEX,INTRADAY
 13132,SEQ,INT_SEQUANA,INTRADAY
 410,GLE,INT_SOCIETE GENERALE,INTRADAY
 6981,SW,INT_SODEXO,INTRADAY
+29466,TOT,INT_TOTAL,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
 525,INT_SPY,INT_US_SPY,INTRADAY
