--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -28,7 +28,7 @@
 8826,DX30,FUT_IND_DAX30,FUTURE
 8839,ES,FUT_IND_SP500,FUTURE
 8884,VIX,FUT_IND_VIX,FUTURE
-980201,ALKLK,INT_KERLINK,INTRADAY
+417,STM,INT_STMICROELECTRONICS,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 7150,LAEP,INT_AVIATIONLATECOERE,INTRADAY
@@ -48,6 +48,7 @@
 7049,ING,INT_INGENICO GROUP,INTRADAY
 17795,IPH,INT_INNATE PHARMA,INTRADAY
 670,KER,INT_KERING,INTRADAY
+980201,ALKLK,INT_KERLINK,INTRADAY
 400,OR,INT_L'OREAL,INTRADAY
 47579,LVC,INT_LVC,INTRADAY
 6972,COX,INT_NICOX,INTRADAY
@@ -60,6 +61,7 @@
 29466,TOT,INT_TOTAL,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
+13063,NFLX,INT_US_NETFLIX,INTRADAY
 525,INT_SPY,INT_US_SPY,INTRADAY
 13994,TSLA,INT_US_TESLA,INTRADAY
 408,VK,INT_VALLOUREC,INTRADAY
