Add SECTORS from investing

--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -43,6 +43,21 @@
 2,FGBPUSD,GBPUSD,FOREX
 7,FUSDCAD,USDCAD,FOREX
 3,FUSDJPY,USDJPY,FOREX
+45378,XAR,AEROSPACE & DEFENSE,SECTORS
+38293,XBI,BIOTECH,SECTORS
+38294,XHB,HOMEBUILDERS,SECTORS
+14226,XLB,MATERIALS,SECTORS
+40657,XLE,ENERGY,SECTORS
+40668,XLF,FINANCIAL,SECTORS
+40670,XLI,INDUSTRIAL,SECTORS
+45384,XLK,TECHNOLOGY,SECTORS
+40690,XLP,CONSUMER STAPLES,SECTORS
+45385,XLU,UTILITIES,SECTORS
+40691,XLV,HEALTH CARE,SECTORS
+40656,XLY,CONSUMER DISCRETIONARY,SECTORS
+9248,XME,METALS & MINING,SECTORS
+45382,XTL,TELECOM,SECTORS
+45383,XTN,TRANSPORTATION,SECTORS
 172,DE30,DAX Future,INDICES
 44336,VIX,VIX,INDICES
 8884,VX,VIX Future,INDICES
