--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -28,7 +28,6 @@
 8826,DX30,FUT_IND_DAX30,FUTURE
 8839,ES,FUT_IND_SP500,FUTURE
 8884,VIX,FUT_IND_VIX,FUTURE
-417,STM,INT_STMICROELECTRONICS,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 7150,LAEP,INT_AVIATIONLATECOERE,INTRADAY
@@ -58,7 +57,9 @@
 410,GLE,INT_SOCIETE GENERALE,INTRADAY
 6981,SW,INT_SODEXO,INTRADAY
 7058,LOCAL,INT_SOLOCAL,INTRADAY
+417,STM,INT_STMICROELECTRONICS,INTRADAY
 29466,TOT,INT_TOTAL,INTRADAY
+40315,EGAB,INT_TOTAL_GABON,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
 13063,NFLX,INT_US_NETFLIX,INTRADAY
