--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -30,7 +30,6 @@
 8884,VIX,FUT_IND_VIX,FUTURE
 386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
-7150,LAEP,INT_AVIATIONLATECOERE,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
 396,BNP,INT_BNP PARIBAS,INTRADAY
@@ -65,4 +64,5 @@
 13063,NFLX,INT_US_NETFLIX,INTRADAY
 525,INT_SPY,INT_US_SPY,INTRADAY
 13994,TSLA,INT_US_TESLA,INTRADAY
+7022,VLOF,INT_VALEO,INTRADAY
 408,VK,INT_VALLOUREC,INTRADAY
