Add Nickel Daily

--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -3,6 +3,7 @@
 8831,HG,COPPER,COMMODITY
 8830,GC,GOLD,COMMODITY
 8862,NG,NATURAL_GAS,COMMODITY
+959208,NCK,NICKEL,COMMODITY
 8833,B,OIL_BRENT,COMMODITY
 8849,CL,OIL_CRUDE,COMMODITY
 8883,PLD,PALLADIUM,COMMODITY
