--- a/EuronextDownload.cfg
+++ b/EuronextDownload.cfg
@@ -10,3 +10,4 @@ EU0009658145;EURO STOXX 50;;ESTX50;INDICES
 FR0010411884;BX4;;BX4;FUND
 FR0010592014;LVC;;LVC;FUND
 FR0010405431;Grece;;GRE;COUNTRY
+FR0011869395;Turquie;;ETUR;COUNTRY
