--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -54,6 +54,7 @@
 7079,RXPA,INT_RECYLEX,INTRADAY
 410,GLE,INT_SOCIETE GENERALE,INTRADAY
 6981,SW,INT_SODEXO,INTRADAY
+6990,SOIT,INT_SOITEC,INTRADAY
 7058,LOCAL,INT_SOLOCAL,INTRADAY
 417,STM,INT_STMICROELECTRONICS,INTRADAY
 29466,TOT,INT_TOTAL,INTRADAY
