--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -52,6 +52,7 @@
 6972,COX,INT_NICOX,INTRADAY
 409,ORA,INT_ORANGE,INTRADAY
 7079,RXPA,INT_RECYLEX,INTRADAY
+419,RENA,INT_RENAULT,INTRADAY
 410,GLE,INT_SOCIETE GENERALE,INTRADAY
 6981,SW,INT_SODEXO,INTRADAY
 6990,SOIT,INT_SOITEC,INTRADAY
