Add Lyxor ETF PEA OBLIG EURO

--- a/EuronextDownload.cfg
+++ b/EuronextDownload.cfg
@@ -12,3 +12,4 @@ FR0010592014;LVC;;LVC;FUND
 FR0010405431;LYXOR ETF PEA GRECE;;GRE;COUNTRY
 FR0011869395;LYXOR ETF PEA TURKEY;;ETUR;COUNTRY
 FR0011869387;LYXOR ETF PEA RUSSIA;;PRUS;COUNTRY
+FR0000051393;LYXOR ETF PEA OBLIG EURO;;OBLI;FUND
