--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -30,6 +30,7 @@
 8884,VIX,FUT_IND_VIX,FUTURE
 386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
+23643,MT,INT_ARCELOR,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
 396,BNP,INT_BNP PARIBAS,INTRADAY
